#pragma once

namespace Bawo {

    enum class AIDifficulty {
        Easy,
        Medium,
        Hard
    };

}
