#pragma once

namespace Bawo {

    enum class Direction {
        Left,
        Right
    };

}
