#pragma once

namespace Bawo {

    enum class GamePhase {
        Setup,
        TrapPhase,
        DefensePhase,
        MatchPhase,
        EndGame
    };

}
