#pragma once

namespace Bawo {

    enum class GameType {
        House,
        FreeMatching
    };

}
