#pragma once

namespace Bawo {

    enum class MatchState {
        Waiting,
        InProgress,
        Paused,
        Finished
    };

}
