#pragma once

namespace Bawo {

    enum class PlayerType {
        Local,
        AI,
        Remote
    };

}
