#pragma once

namespace Bawo {

    enum class PurchaseType {
        SpecialMove,
        SeedStyle,
        BoardStyle
    };

}
